--- a/films/pucci1.html
+++ b/films/pucci1.html
@@ -311,13 +311,6 @@
         </iframe>
     </div>
 </section>
-  
-<!-- === ADSTERRA NATIVE BANNER === -->
-<div style="text-align:center; margin:30px 0;">
-  <script async="async" data-cfasync="false" src="//imbueprescriptionhumiliation.com/932dda4fc02a806bb59c2f6d19cefe46/invoke.js"></script>
-  <div id="container-932dda4fc02a806bb59c2f6d19cefe46"></div>
-</div>
-<!-- === /ADSTERRA NATIVE BANNER === -->
 
   <section class="film-list-section suggested-films">
     <h3>Films Kabyles Similaires</h3>
@@ -384,7 +377,7 @@ document.addEventListener('DOMContentLoaded', function() {
     const videoContainer = document.querySelector('.video-responsive-container');
     
     // Lien de la vidéo
-    const videoUrl = 'https://hglink.to/e/yt3txh0bxhtm';
+    const videoUrl = 'https://hglink.to/e/j9tsobh2m54t';
     
     // Fonction pour charger la vidéo
     function loadVideo() {
