--- a/films/limucucu1.html
+++ b/films/limucucu1.html
@@ -502,7 +502,7 @@ document.addEventListener('DOMContentLoaded', function() {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.7) url('../images/li mucucu 1.jpg') center center/cover no-repeat;
+    background: rgba(0, 0, 0, 0.7) url('../images/.jpg') center center/cover no-repeat;
     display: flex;
     align-items: center;
     justify-content: center;
