--- a/films/pucci1.html
+++ b/films/pucci1.html
@@ -499,7 +499,7 @@ document.addEventListener('DOMContentLoaded', function() {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.7) url('../images/pucci1.jpg') center center/cover no-repeat;
+    background: rgba(0, 0, 0, 0.7) url('../images/.jpg') center center/cover no-repeat;
     display: flex;
     align-items: center;
     justify-content: center;
