--- a/films/pucci4.html
+++ b/films/pucci4.html
@@ -386,7 +386,7 @@ document.addEventListener('DOMContentLoaded', function() {
     const videoContainer = document.querySelector('.video-responsive-container');
     
     // Lien de la vidéo
-    const videoUrl = 'https://hglink.to/ego95tmbic9b';
+    const videoUrl = 'https://hglink.to/e/ego95tmbic9b';
     
     // Fonction pour charger la vidéo
     function loadVideo() {
