--- a/films/qezbul1.html
+++ b/films/qezbul1.html
@@ -14,6 +14,8 @@
 
   <meta name="keywords" content="film kabyle, cinema amazigh, streaming gratuit, pucci, qezbul, li mucucu">
   <meta name="author" content="Amazigh TV">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta http-equiv="Delegate-CH" content="Sec-CH-UA https://s.magsrv.com; Sec-CH-UA-Mobile https://s.magsrv.com; Sec-CH-UA-Arch https://s.magsrv.com; Sec-CH-UA-Model https://s.magsrv.com; Sec-CH-UA-Platform https://s.magsrv.com; Sec-CH-UA-Platform-Version https://s.magsrv.com; Sec-CH-UA-Bitness https://s.magsrv.com; Sec-CH-UA-Full-Version-List https://s.magsrv.com; Sec-CH-UA-Full-Version https://s.magsrv.com;">
 
   <link rel="canonical" href="https://amazigh-tv.site/films/qezbul1.html">
   <link rel="stylesheet" href="../style.css">
