Ajout fichier ads.txt sans conversion CRLF

--- a/films/kiki1.html
+++ b/films/kiki1.html
@@ -352,11 +352,11 @@
   {
     "@context": "https://schema.org",
     "@type": "Movie",
-    "name": "Crek 1",
-    "description": "Film fantastique Comédie kabyle Crek 1 - Film animation en kabyle",
-    "image": "https://amazigh-tv.site/images/kiki.jpg",
+    "name": "Kiki 1",
+    "description": "Film fantastique Comédie kabyle Kiki 1 - Film animation en kabyle",
+    "image": "https://amazigh-tv.site/images/kiki1.jpg",
     "duration": "PT127M",
-    "genre": "Fantasy, Comédie",
+    "genre": "Fantasy, Comédie, aventure",
     "datePublished": "2001",
     "actor": [
       {
