--- a/films/limucucu2.html
+++ b/films/limucucu2.html
@@ -352,10 +352,10 @@
     "@type": "Movie",
     "name": "Li Mucucu 2",
     "description": "Film comédie kabyle Li Mucucu 2 - Aventures hilarantes de Li Mucucu et ses amis",
-    "image": "https://amazigh-tv.site/images/li mucucu 1.jpg",
+    "image": "https://amazigh-tv.site/images/li mucucu 2.jpg",
     "duration": "PT74M",
-    "genre": "Comedy",
-    "datePublished": "2023",
+    "genre": "Comedy, musique",
+    "datePublished": "2009",
     "actor": [
       {
         "@type": "Person",
