--- a/films/qiqi1.html
+++ b/films/qiqi1.html
@@ -350,12 +350,12 @@
   {
     "@context": "https://schema.org",
     "@type": "Movie",
-    "name": "Li Mucucu 1",
-    "description": "Film comédie kabyle Li Mucucu 1 - Aventures hilarantes de Li Mucucu et ses amis",
-    "image": "https://amazigh-tv.site/images/qiqi1s.jpg",
+    "name": "qiq 1",
+    "description": "Film comédie kabyle qiq 1 - Aventures hilarantes de Li Mucucu et ses amis",
+    "image": "https://amazigh-tv.site/images/qiqi1.jpg",
     "duration": "PT74M",
-    "genre": "Comedy",
-    "datePublished": "2023",
+    "genre": "Comedy, cuisine",
+    "datePublished": "2007",
     "actor": [
       {
         "@type": "Person",
