--- a/films/narnia2.html
+++ b/films/narnia2.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Regarder Narnia 2 en streaming HD gratuit. Film fantastique kabyle complet de 127 minutes. Aventure magique en terre Amazigh.">
   <meta property="og:title" content="Narnia 2 - Film Kabyle Fantastique Gratuit | Amazigh TV">
   <meta property="og:description" content="Film fantastique et comique kabyle Narnia 2 en streaming HD. Durée: 77 min. Genre: Fantastique.">
-  <meta property="og:image" content="../images/crek1.jpg">
+  <meta property="og:image" content="../images/narnia2.jpg">
   <meta property="og:url" content="https://amazigh-tv.site/films/narnia2.html">
   <meta property="og:type" content="video.movie">
 
@@ -352,12 +352,12 @@
   {
     "@context": "https://schema.org",
     "@type": "Movie",
-    "name": "Crek 1",
-    "description": "Film fantastique Comédie kabyle Crek 1 - Film animation en kabyle",
+    "name": "Narnia 2",
+    "description": "Film fantastique Comédie kabyle Narnia 2 - Film animation en kabyle",
     "image": "https://amazigh-tv.site/images/narnia2.jpg",
     "duration": "PT127M",
-    "genre": "Fantasy, Comédie",
-    "datePublished": "2001",
+    "genre": "Fantasy, Aventure",
+    "datePublished": "2008",
     "actor": [
       {
         "@type": "Person",
