--- a/films/pucci2.html
+++ b/films/pucci2.html
@@ -352,12 +352,12 @@
   {
     "@context": "https://schema.org",
     "@type": "Movie",
-    "name": "Pucci 1",
-    "description": "Film comédie kabyle Pucci 1 - Premier volet de la série culte Pucci",
-    "image": "https://amazigh-tv.site/images/pucci1.jpg",
+    "name": "Pucci 2",
+    "description": "Film comédie kabyle Pucci 2 - Premier volet de la série culte Pucci",
+    "image": "https://amazigh-tv.site/images/video-pucci2.jpg",
     "duration": "PT80M",
-    "genre": "Comedy",
-    "datePublished": "2023",
+    "genre": "Comedy, Aventure",
+    "datePublished": "2006",
     "actor": [
       {
         "@type": "Person",
