--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="07fe427079b43a826e1ea8975e129a746b4b42be" content="07fe427079b43a826e1ea8975e129a746b4b42be" />
+
   <title>Contact - Amazigh TV</title>
   <meta name="description" content="Contactez l'équipe d'Amazigh TV pour toute question ou suggestion.">
   <link rel="stylesheet" href="style.css">
