--- a/films.html
+++ b/films.html
@@ -10,6 +10,7 @@
   <meta property="og:description" content="Le catalogue complet des films Amazighs : Comédie, Drame, Action.">
   <meta property="og:type" content="website">
   <meta property="og:image" content="/images/og-image.jpg">
+  <meta name="07fe427079b43a826e1ea8975e129a746b4b42be" content="07fe427079b43a826e1ea8975e129a746b4b42be" />
 
   <link rel="canonical" href="https://amazigh-tv.site/films/films.html" />
   <link rel="stylesheet" href="style.css">
