--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <meta property="og:image:alt" content="Amazigh TV - Logo">
 <meta property="og:type" content="website">
 <meta property="og:site_name" content="Amazigh TV">
+<meta name="07fe427079b43a826e1ea8975e129a746b4b42be" content="07fe427079b43a826e1ea8975e129a746b4b42be" />
 
 <!-- Twitter Card -->
 <meta name="twitter:image" content="https://amazigh-tv.vercel.app/images/logo-512.png">
