Ajout fichier ads.txt sans conversion CRLF

--- a/films/limucucu1.html
+++ b/films/limucucu1.html
@@ -17,6 +17,7 @@
   <meta http-equiv="Delegate-CH" content="Sec-CH-UA https://s.magsrv.com; Sec-CH-UA-Mobile https://s.magsrv.com; Sec-CH-UA-Arch https://s.magsrv.com; Sec-CH-UA-Model https://s.magsrv.com; Sec-CH-UA-Platform https://s.magsrv.com; Sec-CH-UA-Platform-Version https://s.magsrv.com; Sec-CH-UA-Bitness https://s.magsrv.com; Sec-CH-UA-Full-Version-List https://s.magsrv.com; Sec-CH-UA-Full-Version https://s.magsrv.com;">
   <meta name="07fe427079b43a826e1ea8975e129a746b4b42be" content="07fe427079b43a826e1ea8975e129a746b4b42be" />
 
+  <meta name="referrer" content="no-referrer-when-downgrade" />
   
   <link rel="canonical" href="https://amazigh-tv.site/films/limucucu1.html">
   <link rel="stylesheet" href="../style.css">
