--- a/films.html
+++ b/films.html
@@ -12,6 +12,8 @@
   <meta property="og:image" content="/images/og-image.jpg">
   <meta name="07fe427079b43a826e1ea8975e129a746b4b42be" content="07fe427079b43a826e1ea8975e129a746b4b42be" />
 
+  <meta name="referrer" content="no-referrer-when-downgrade" />
+
   <link rel="canonical" href="https://amazigh-tv.site/films/films.html" />
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" sizes="32x32" href="/images/logo-32.png">
