--- a/films/kiki1.html
+++ b/films/kiki1.html
@@ -12,6 +12,9 @@
   <meta property="og:url" content="https://amazigh-tv.site/films/kiki1.html">
   <meta property="og:type" content="video.movie">
   <meta name="07fe427079b43a826e1ea8975e129a746b4b42be" content="07fe427079b43a826e1ea8975e129a746b4b42be" />
+
+  <meta name="referrer" content="no-referrer-when-downgrade" />
+  
   <meta name="keywords" content="film kabyle, cinema amazigh, streaming gratuit, kiki 1, narnia 2, crek1, pucci, qezbul, li mucucu">
   <meta name="author" content="Amazigh TV">
 
