--- a/films/qiqi1.html
+++ b/films/qiqi1.html
@@ -14,6 +14,9 @@
   <meta name="keywords" content="film kabyle, cinema amazigh, streaming gratuit, pucci, qezbul, Qiqi Bu Lemraqi , li mucucu 1">
   <meta name="author" content="Amazigh TV">
   <meta name="07fe427079b43a826e1ea8975e129a746b4b42be" content="07fe427079b43a826e1ea8975e129a746b4b42be" />
+
+  <meta name="referrer" content="no-referrer-when-downgrade" />
+  
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta http-equiv="Delegate-CH" content="Sec-CH-UA https://s.magsrv.com; Sec-CH-UA-Mobile https://s.magsrv.com; Sec-CH-UA-Arch https://s.magsrv.com; Sec-CH-UA-Model https://s.magsrv.com; Sec-CH-UA-Platform https://s.magsrv.com; Sec-CH-UA-Platform-Version https://s.magsrv.com; Sec-CH-UA-Bitness https://s.magsrv.com; Sec-CH-UA-Full-Version-List https://s.magsrv.com; Sec-CH-UA-Full-Version https://s.magsrv.com;">
 
