--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 <meta property="og:site_name" content="Amazigh TV">
 <meta name="07fe427079b43a826e1ea8975e129a746b4b42be" content="07fe427079b43a826e1ea8975e129a746b4b42be" />
 
+<meta name="referrer" content="no-referrer-when-downgrade" />
+
 <!-- Twitter Card -->
 <meta name="twitter:image" content="https://amazigh-tv.vercel.app/images/logo-512.png">
 <meta name="twitter:card" content="summary_large_image">
