Ajout fichier ads.txt sans conversion CRLF

--- a/films.html
+++ b/films.html
@@ -25,6 +25,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:wght@400;700;900&display=swap" rel="stylesheet">
   
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+
+  <script src="ads-manager.js"></script>
   
   <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-4NKY9G2SBN"></script>
@@ -300,6 +302,6 @@ document.addEventListener('DOMContentLoaded', function() {
 });
 </script>
 
-<script type='text/javascript' src='//foreststobaccodecember.com/1a/84/8b/1a848bcee8d4bae2bf2bd81b1d7c5873.js'></script>
+
 </body>
 </html>
