--- a/films/pucci1.html
+++ b/films/pucci1.html
@@ -34,6 +34,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:wght@400;700;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
+  <script src="../ads-manager.js"></script>
   
   
   <!-- Google tag (gtag.js) -->
@@ -609,10 +610,6 @@ html {
     }
 }
 </style>
-
-<script type='text/javascript' src='//foreststobaccodecember.com/a0/6a/fd/a06afd1b91c7859c505a158626b21ab5.js'></script>
-
-<script type='text/javascript' src='//foreststobaccodecember.com/e6/44/c9/e644c95728921f21f50be95a8e83406f.js'></script>
 
 </body>
 </html>
