--- a/films/qezbul1.html
+++ b/films/qezbul1.html
@@ -33,6 +33,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:wght@400;700;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+
+  <script src="../ads-manager.js"></script>
   
   
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-2L50HTQ2Z6"></script>
@@ -616,8 +618,6 @@ html {
 </style>
 
 <script type='text/javascript' src='//foreststobaccodecember.com/5b/e3/c8/5be3c802690304ae4cc89040ad2ca066.js'></script>
-
-<script type='text/javascript' src='//foreststobaccodecember.com/01/35/4d/01354df7fb75c47a65a288d747225f1a.js'></script>
 
 </body>
 </html>
