--- a/films/kiki1.html
+++ b/films/kiki1.html
@@ -32,6 +32,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:wght@400;700;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+
+  <script src="../ads-manager.js"></script>
+  
   <script type="text/javascript" src="//ads.vidoomy.com/amazigh-tvvercelapp_26776.js" ></script>
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-2L50HTQ2Z6"></script>
   <script>
@@ -614,10 +617,7 @@ html {
 
 
 
-<script type='text/javascript' src='//foreststobaccodecember.com/a8/ca/69/a8ca693f5012e520d2a420a7cbe98c99.js'></script>
 
-
-<script type='text/javascript' src='//foreststobaccodecember.com/b0/35/26/b03526d32d904a850f5b42807a87b09f.js'></script>
 
 
 
