--- a/films/limucucu2.html
+++ b/films/limucucu2.html
@@ -30,6 +30,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:wght@400;700;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+
+  <script src="../ads-manager.js"></script>
+  
   <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-4NKY9G2SBN"></script>
 <script>
@@ -611,10 +614,7 @@ html {
 </style>
 
 
-<script type='text/javascript' src='//foreststobaccodecember.com/2f/d9/8a/2fd98a043f3b6e5e13801758f641d1ed.js'></script>
 
-
-<script type='text/javascript' src='//foreststobaccodecember.com/f7/44/6a/f7446a9645e376ef3a15c6fdafc9adc3.js'></script>
 
 </body>
 </html>
