Ajout fichier ads.txt sans conversion CRLF

--- a/films/narnia2.html
+++ b/films/narnia2.html
@@ -32,8 +32,6 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:wght@400;700;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-
-  <script src="../ads-manager.js"></script>
   <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-4NKY9G2SBN"></script>
 <script>
@@ -614,6 +612,11 @@ html {
 </style>
 
 
+
+<script type='text/javascript' src='//foreststobaccodecember.com/e6/74/11/e6741100cf4581e3832806de7f4d3142.js'></script>
+
+
+<script type='text/javascript' src='//foreststobaccodecember.com/d2/7f/78/d27f787ad701664d297cc3b8663127f3.js'></script>
 
 </body>
 
