--- a/films/pucci4.html
+++ b/films/pucci4.html
@@ -33,9 +33,6 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:wght@400;700;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-
-  <script src="../ads-manager.js"></script>
-  
   <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-4NKY9G2SBN"></script>
 <script>
@@ -618,7 +615,10 @@ html {
 </style>
 
 
+<script type='text/javascript' src='//foreststobaccodecember.com/ee/cb/b5/eecbb51015c12fbfcd22b0006e446933.js'></script>
 
+
+<script type='text/javascript' src='//foreststobaccodecember.com/1a/84/8b/1a848bcee8d4bae2bf2bd81b1d7c5873.js'></script>
 
 
 </body>
