--- a/films/pucci2.html
+++ b/films/pucci2.html
@@ -34,7 +34,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:wght@400;700;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
-  
+  <script type='text/javascript' src='//foreststobaccodecember.com/5a/ab/a7/5aaba7859189c74547218590262636ef.js'></script>
+
+<script type='text/javascript' src='//foreststobaccodecember.com/a1/47/1a/a1471a6204e5a288a2109076b3952161.js'></script>
   
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-2L50HTQ2Z6"></script>
   <script>
