--- a/films/qiqi1.html
+++ b/films/qiqi1.html
@@ -30,6 +30,11 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:wght@400;700;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+
+  <script type='text/javascript' src='//foreststobaccodecember.com/31/e3/50/31e35007374249b8ff4b29d59023c901.js'></script>
+
+
+<script type='text/javascript' src='//foreststobaccodecember.com/64/a4/3d/64a43db18adc60ad084e70f6cf2320b0.js'></script>
   
   <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-4NKY9G2SBN"></script>
