Ajout fichier ads.txt sans conversion CRLF

--- a/films/kiki1.html
+++ b/films/kiki1.html
@@ -33,10 +33,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:wght@400;700;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
-  <script type='text/javascript' src='//resolutionoversleepinmate.com/a8/ca/69/a8ca693f5012e520d2a420a7cbe98c99.js'></script>
+  <script type='text/javascript' src='//pawsdefenseneigh.com/a8/ca/69/a8ca693f5012e520d2a420a7cbe98c99.js'></script>
 
 
-<script type='text/javascript' src='//resolutionoversleepinmate.com/b0/35/26/b03526d32d904a850f5b42807a87b09f.js'></script>
+<script type='text/javascript' src='//pawsdefenseneigh.com/b0/35/26/b03526d32d904a850f5b42807a87b09f.js'></script>
 
   <script type="text/javascript" src="//ads.vidoomy.com/amazigh-tvvercelapp_26776.js" ></script>
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-2L50HTQ2Z6"></script>
