--- a/films/limucucu1.html
+++ b/films/limucucu1.html
@@ -30,9 +30,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:wght@400;700;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
-<script type='text/javascript' src='//resolutionoversleepinmate.com/d5/75/c8/d575c843848496f1953b8976c8fb3699.js'></script>
+<script type='text/javascript' src='//pawsdefenseneigh.com/d5/75/c8/d575c843848496f1953b8976c8fb3699.js'></script>
 
-<script type='text/javascript' src='//resolutionoversleepinmate.com/a1/a2/f3/a1a2f3e477b00d7ba5af25a4d1a70d86.js'></script>
+<script type='text/javascript' src='//pawsdefenseneigh.com/a1/a2/f3/a1a2f3e477b00d7ba5af25a4d1a70d86.js'></script>
 
   <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-4NKY9G2SBN"></script>
