--- a/films/qezbul1.html
+++ b/films/qezbul1.html
@@ -35,9 +35,9 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   
 
-<script type='text/javascript' src='//resolutionoversleepinmate.com/5b/e3/c8/5be3c802690304ae4cc89040ad2ca066.js'></script>
+<script type='text/javascript' src='//pawsdefenseneigh.com/5b/e3/c8/5be3c802690304ae4cc89040ad2ca066.js'></script>
 
-<script type='text/javascript' src='//resolutionoversleepinmate.com/01/35/4d/01354df7fb75c47a65a288d747225f1a.js'></script>
+<script type='text/javascript' src='//pawsdefenseneigh.com/01/35/4d/01354df7fb75c47a65a288d747225f1a.js'></script>
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-2L50HTQ2Z6"></script>
   <script>
