--- a/films/narnia2.html
+++ b/films/narnia2.html
@@ -33,10 +33,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:wght@400;700;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
-  <script type='text/javascript' src='//resolutionoversleepinmate.com/e6/74/11/e6741100cf4581e3832806de7f4d3142.js'></script>
+  <script type='text/javascript' src='//pawsdefenseneigh.com/e6/74/11/e6741100cf4581e3832806de7f4d3142.js'></script>
 
 
-<script type='text/javascript' src='//resolutionoversleepinmate.com/d2/7f/78/d27f787ad701664d297cc3b8663127f3.js'></script>
+<script type='text/javascript' src='//pawsdefenseneigh.com/d2/7f/78/d27f787ad701664d297cc3b8663127f3.js'></script>
 
 
   <!-- Google tag (gtag.js) -->
