--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <meta name="twitter:image" content="https://amazigh-tv.vercel.app/images/logo-512.png">
 <meta name="twitter:card" content="summary_large_image">
 
-<script type='text/javascript' src='//resolutionoversleepinmate.com/31/c4/9c/31c49ce66a7cc87dbcb332ef3d028acb.js'></script>
+<script type='text/javascript' src='//pawsdefenseneigh.com/31/c4/9c/31c49ce66a7cc87dbcb332ef3d028acb.js'></script>
 
 <!-- Schema.org Organization avec logo -->
 <script type="application/ld+json">
