--- a/index.html
+++ b/index.html
@@ -163,18 +163,22 @@
     <h3>Films en Vedette</h3>
     <div class="film-grid">
 
-      <a href="films/limucucu2.html" class="film-card">
+
+      <a href="films/crek2.html" class="film-card">
           <article>
             <div class="film-poster">
-              <img src="images/li mucucu 2.jpg" alt="li mucucu - Film comedie Kabyle" loading="lazy">
+              <img src="images/crek2.jpg" alt="li mucucu - Film comedie Kabyle" loading="lazy">
               <div class="play-overlay"><i class="fas fa-play play-icon-lg"></i></div>
             </div>
             <div class="film-info">
-              <h4>Li mucucu 2</h4>
-              <p>Comédie, 74 min</p>
+              <h4>Crek 2</h4>
+              <p>Comédie, 90 min</p>
             </div>
           </article>
         </a>
+
+
+      
 
       <a href="films/kiki1.html" class="film-card">
           <article>
