Ajout des pages de connexion séparées

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
+<meta name='admaven-placement' content=Bqja4qHk7>
+
 <!-- Twitter Card -->
 <meta name="twitter:image" content="https://amazigh-tv.vercel.app/images/logo-512.png">
 <meta name="twitter:card" content="summary_large_image">
