Résolution des conflits

--- a/index.html
+++ b/index.html
@@ -27,6 +27,16 @@
 <meta name="twitter:image" content="https://amazigh-tv.vercel.app/images/logo-512.png">
 <meta name="twitter:card" content="summary_large_image">
 
+<script src="https://cmp.gatekeeperconsent.com/min.js" data-cfasync="false"></script>
+<script src="https://the.gatekeeperconsent.com/cmp.min.js" data-cfasync="false"></script>
+
+<script async src="//www.ezojs.com/ezoic/sa.min.js"></script>
+<script>
+    window.ezstandalone = window.ezstandalone || {};
+    ezstandalone.cmd = ezstandalone.cmd || [];
+</script>
+
+
 <script type='text/javascript' src='//pawsdefenseneigh.com/31/c4/9c/31c49ce66a7cc87dbcb332ef3d028acb.js'></script>
 
 <!-- Schema.org Organization avec logo -->
