Résolution des conflits

--- a/films/3ichucha.html
+++ b/films/3ichucha.html
@@ -271,7 +271,7 @@
 <body>
 
 <header class="header">
-  <a href="index.html" class="logo">
+  <a href="../index.html" class="logo">
     <img src="../images/logo-180.png" alt="Logo Amazigh TV" class="logo-image">
     <span>Amazigh TV</span>
 </a>
@@ -370,7 +370,7 @@
   {
     "@context": "https://schema.org",
     "@type": "Movie",
-    "name": "3ichucha,
+    "name": "3ichucha",
     "description": "Film fantastique Comédie kabyle 3ichucha - Film animation en kabyle",
     "image": "https://amazigh-tv.site/images/3ichucha.jpg",
     "duration": "PT127M",
