--- a/films/crek1.html
+++ b/films/crek1.html
@@ -271,7 +271,7 @@
 <body>
 
 <header class="header">
-  <a href="index.html" class="logo">
+  <a href="../index.html" class="logo">
     <img src="../images/logo-180.png" alt="Logo Amazigh TV" class="logo-image">
     <span>Amazigh TV</span>
 </a>
