--- a/films.html
+++ b/films.html
@@ -47,7 +47,7 @@
 
 
 <header class="header">
-  <a href="index.html" class="logo">
+  <a href="../index.html" class="logo">
     <img src="./images/logo-180.png" alt="Logo Amazigh TV" class="logo-image">
     <span>Amazigh TV</span>
 </a>
