Résolution des conflits

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   "name": "Amazigh TV",
   "url": "https://amazigh-tv.site.app",
   "logo": "https://amazigh-tv.site/images/logo-512.png",
-  "description": "Films et courts métrages Kabyles en streaming gratuit",
+  "description": "Films et courts métrages Kabyles en streaming gratuit Pucci, Qezbul, Crek, Narnia, 3ichucha, kiki, qiqi bu lemraqi, lamara la cuvette, ali d wali, skarfez, kipous, kypous",
   "sameAs": []
 }
 </script>
@@ -305,7 +305,7 @@
     "@context": "https://schema.org",
     "@type": "WebSite",
     "name": "Amazigh TV",
-    "description": "Films et courts métrages Kabyles en streaming",
+    "description": "Films et courts métrages Kabyles en streaming Pucci, Qezbul, Crek, Narnia, 3ichucha, kiki, qiqi bu lemraqi, lamara la cuvette, ali d wali, skarfez, kipous, kypous",
     "url": "https://amazigh-tv.vercel.app"
   }
   </script>
