Résolution des conflits

--- a/films.html
+++ b/films.html
@@ -100,6 +100,20 @@
     <div class="film-grid">
 
 
+      
+      <a href="films/3ichucha.html" class="film-card">
+          <article>
+            <div class="film-poster">
+              <img src="images/kiki1.jpg" alt="3ichucha Film comédie Kabyle" loading="lazy">
+              <div class="play-overlay"><i class="fas fa-play play-icon-lg"></i></div>
+            </div>
+            <div class="film-info">
+              <h4>3ichucha</h4>
+              <p>fantastique, 85 min</p>
+            </div>
+          </article>
+        </a>
+
 
         <a href="films/crek2.html" class="film-card">
           <article>
