--- a/index.html
+++ b/index.html
@@ -192,15 +192,15 @@
 
       
 
-      <a href="films/kiki1.html" class="film-card">
+      <a href="films/3ichucha.html" class="film-card">
           <article>
             <div class="film-poster">
-              <img src="images/kiki1.jpg" alt="kiki 1 - Film comédie Kabyle" loading="lazy">
+              <img src="images/kiki1.jpg" alt="3ichucha Film comédie Kabyle" loading="lazy">
               <div class="play-overlay"><i class="fas fa-play play-icon-lg"></i></div>
             </div>
             <div class="film-info">
-              <h4>Kiki 1</h4>
-              <p>Comédie, 75 min</p>
+              <h4>3ichucha</h4>
+              <p>fantastique, 85 min</p>
             </div>
           </article>
         </a>
