Résolution des conflits

--- a/films/crek1.html
+++ b/films/crek1.html
@@ -54,7 +54,7 @@
         position: relative; 
         min-height: 60vh;
         background: linear-gradient(rgba(0,0,0,0.85), rgba(0,0,0,0.9)), 
-                    url('../images/pucci1.jpg') center center/cover no-repeat;
+                    url('../images/crek1.jpg') center center/cover no-repeat;
         display: flex; 
         align-items: center; 
         padding: 120px 40px 60px;
