Résolution des conflits

--- a/films.html
+++ b/films.html
@@ -47,10 +47,10 @@
 
 
 <header class="header">
-  <a href="../index.html" class="logo">
+  <a href="../index.html" class="logo-container">
     <img src="./images/logo-180.png" alt="Logo Amazigh TV" class="logo-image">
-    <span>Amazigh TV</span>
-</a>
+    <span class="logo-text">Amazigh TV</span>
+  </a>
   <nav class="navigation">
     <a href="index.html"><i class="fas fa-home"></i> Accueil</a>
     <a href="films.html" class="nav-active"><i class="fas fa-film"></i> Catalogue</a>
