--- a/films.html
+++ b/films.html
@@ -47,13 +47,13 @@
 
 
 <header class="header">
-  <a href="../index.html" class="logo-container">
+  <a href="index.html" class="logo-container">
     <img src="./images/logo-180.png" alt="Logo Amazigh TV" class="logo-image">
     <span class="logo-text">Amazigh TV</span>
   </a>
   <nav class="navigation">
-    <a href="index.html"><i class="fas fa-home"></i> Accueil</a>
-    <a href="films.html" class="nav-active"><i class="fas fa-film"></i> Catalogue</a>
+    <a href="index.html" class="nav-active"><i class="fas fa-home"></i> Accueil</a>
+    <a href="films.html"><i class="fas fa-film"></i> Catalogue</a>
     <a href="contact.html"><i class="fas fa-envelope"></i> Contact</a>
   </nav>
 </header>
@@ -99,20 +99,6 @@
 
     <div class="film-grid">
 
-
-      
-      <a href="films/3ichucha.html" class="film-card">
-          <article>
-            <div class="film-poster">
-              <img src="images/kiki1.jpg" alt="3ichucha Film comédie Kabyle" loading="lazy">
-              <div class="play-overlay"><i class="fas fa-play play-icon-lg"></i></div>
-            </div>
-            <div class="film-info">
-              <h4>3ichucha</h4>
-              <p>fantastique, 85 min</p>
-            </div>
-          </article>
-        </a>
 
 
         <a href="films/crek2.html" class="film-card">
