Résolution des conflits

--- a/films.html
+++ b/films.html
@@ -47,13 +47,13 @@
 
 
 <header class="header">
-  <a href="index.html" class="logo-container">
+  <a href="../index.html" class="logo">
     <img src="./images/logo-180.png" alt="Logo Amazigh TV" class="logo-image">
-    <span class="logo-text">Amazigh TV</span>
-  </a>
+    <span>Amazigh TV</span>
+</a>
   <nav class="navigation">
-    <a href="index.html" class="nav-active"><i class="fas fa-home"></i> Accueil</a>
-    <a href="films.html"><i class="fas fa-film"></i> Catalogue</a>
+    <a href="index.html"><i class="fas fa-home"></i> Accueil</a>
+    <a href="films.html" class="nav-active"><i class="fas fa-film"></i> Catalogue</a>
     <a href="contact.html"><i class="fas fa-envelope"></i> Contact</a>
   </nav>
 </header>
