Résolution des conflits

--- a/films.html
+++ b/films.html
@@ -102,7 +102,7 @@
 <a href="films/3ichucha.html" class="film-card">
           <article>
             <div class="film-poster">
-              <img src="images/kiki1.jpg" alt="3ichucha Film comédie Kabyle" loading="lazy">
+              <img src="images/3ichucha.jpg" alt="3ichucha Film comédie Kabyle" loading="lazy">
               <div class="play-overlay"><i class="fas fa-play play-icon-lg"></i></div>
             </div>
             <div class="film-info">
